tests/NormalTests/paczka1/fuzzy1/45879214.err
Error in line 3: womER S688 89,63
Error in line 10: gKttiUT A115 24,64
Error in line 12: gKttiUT A115 115,2
Error in line 15: NXV4ple A115 58,4
Error in line 39: ÀeUGiFncwwb S688 75,1
Error in line 36: lj7e0u5f3 S688 49,3
